# Quanta

./: CMakeLists.txt  README.md
.github/workflows/: windows_build.yml
.github/workflows/.github/workflows/: windows_build.yml
QuantaLanguage/: .gitignore
QuantaLanguage/include/: quanta.h
QuantaLanguage/src/: codegen.cpp  lexer.cpp  parser.cpp  quanta_lib.c
QuantaLanguage/tests/: dd.qnt  dynamic_list_test.qnt  string_functions_test.qnt  string_index_assign_test.qnt  stringloop.qnt  test.qnt
QuantaLanguage/windows_installer/: README.md  quanta.iss
docs/: QuantaBook.md  The_Quanta_Programming_Language.md  UPDATE.md  custom.css
include/: quanta.h
src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp
tests/: dd.qnt  fixed_array_test.qnt  string.qnt  string_functions_test.qnt  stringchange.qnt  stringslice.qnt  test.qnt
